--- a/Configuration/NodeTypes.Constraint.Document.BackendOnly.yaml
+++ b/Configuration/NodeTypes.Constraint.Document.BackendOnly.yaml
@@ -4,13 +4,13 @@
     fulltext:
       enable: false
   superTypes:
-    'Neos.Seo:TitleTagMixin': false
-    'Neos.Seo:SeoMetaTagsMixin': false
-    'Neos.Seo:TwitterCardMixin': false
-    'Neos.Seo:CanonicalLinkMixin': false
-    'Neos.Seo:OpenGraphMixin': false
-    'Neos.Seo:XmlSitemapMixin': false
-    'Neos.Seo:NoindexMixin': true
+    Neos.Seo:TitleTagMixin: false
+    Neos.Seo:SeoMetaTagsMixin: false
+    Neos.Seo:TwitterCardMixin: false
+    Neos.Seo:CanonicalLinkMixin: false
+    Neos.Seo:OpenGraphMixin: false
+    Neos.Seo:XmlSitemapMixin: false
+    Neos.Seo:NoindexMixin: true
   properties:
     _hiddenInIndex:
       defaultValue: true
