--- a/Configuration/NodeTypes.Document.Tags.yaml
+++ b/Configuration/NodeTypes.Document.Tags.yaml
@@ -6,6 +6,7 @@
     label: Tags
     icon: icon-tags
     position: 900
+    inlineEditable: true
   constraints:
     nodeTypes:
       Neos.Neos:Document: false
