FEATURE: UX Improvement

--- a/Configuration/NodeTypes.Document.Tag.yaml
+++ b/Configuration/NodeTypes.Document.Tag.yaml
@@ -10,3 +10,9 @@
   constraints:
     nodeTypes:
       '*': false
+  properties:
+    title:
+      ui:
+        label: Name des Tags
+    titleOverride:
+      ui: ~
